--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </div>
     <div class ="sound">
       <audio id="music">
-        <source src="My Heart Will Go On.mp3" type="audio/mpeg">
+        <source src="My Heart Will Go On.mp3" type="audio/mpeg" loop="true" autostart="true">
           </audio>
           <p>Click the button for full experience.</p>
-          <button onclick="play()" type="button">Play </button>
-          <button onclick="pause()" type="button">Pause</button>
+          <button onclick="play()" type="button">Sail</button>
+          <button onclick="pause()" type="button">Sink</button>
           <script>
             var myMusic= document.getElementById("music");
             function play() {
